# finlake-ai-analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/sdd/archive/AGENT_CORE/: BUILD_REPORT_AGENT_CORE.md  DEFINE_AGENT_CORE.md  DESIGN_AGENT_CORE.md  SHIPPED_2026-06-12.md
.claude/sdd/archive/INFRA_BASE/: BRAINSTORM_INFRA_BASE.md  BUILD_REPORT_INFRA_BASE.md  DEFINE_INFRA_BASE.md  DESIGN_INFRA_BASE.md  SHIPPED_2026-06-08.md
.claude/sdd/archive/OBSERVABILITY/: BRAINSTORM_OBSERVABILITY.md  BUILD_REPORT_OBSERVABILITY.md  DEFINE_OBSERVABILITY.md  DESIGN_OBSERVABILITY.md  SHIPPED_2026-06-15.md
.claude/sdd/archive/PROMPTS/: BRAINSTORM_PROMPTS.md  BUILD_REPORT_PROMPTS.md  DEFINE_PROMPTS.md  DESIGN_PROMPTS.md  SHIPPED_2026-06-10.md
.claude/sdd/archive/SQL_TOOL/: BRAINSTORM_SQL_TOOL.md  BUILD_REPORT_SQL_TOOL.md  DEFINE_SQL_TOOL.md  DESIGN_SQL_TOOL.md  SHIPPED_2026-06-09.md
.claude/sdd/features/: BRAINSTORM_AGENT_CORE.md
.deepeval/: .deepeval_telemetry.txt
evals/: __init__.py  eval_sql.py
src/finlake_analyst/: __init__.py  app.py  config.py
src/finlake_analyst/agent/: __init__.py  graph.py  nodes.py  state.py
src/finlake_analyst/prompts/: __init__.py  interpretation_prompt.py  sql_prompt.py
src/finlake_analyst/tools/: __init__.py  database.py  sql_execute.py  sql_schema.py
tests/: __init__.py  test_agent_graph.py  test_agent_nodes.py  test_config.py  test_prompts.py  test_sql_execute.py  test_sql_schema.py
